# jacket

./: .coveragerc  .testr.conf  setup.cfg  tox.ini  wsgi.py
doc/source/: conf.py
etc/jacket/: compute-api-paste.ini  jacket-api-paste.ini  jacket-config-generator.conf  jacket-policy-generator.conf  jacket.conf.sample  policy.json  rootwrap.conf  volume-api-paste.ini
etc/storage/: api-paste.ini
jacket/: __init__.py  base_rpc.py  context.py  exception.py  i18n.py  jacket_service.py  manager.py  netconf.py  opts.py  policy.py  rpc.py  service.py  test.py  utils.py  version.py
jacket/_gsdata_/: _file_state_v4._gs  _insync_v4.gsl
jacket/api/: __init__.py  common.py
jacket/api/cloud_config/: extensions.py  versions.py
jacket/api/compute/: auth.py  manager.py  opts.py
jacket/api/extend/: extensions.py  versions.py
jacket/api/hybrid_cloud/: common.py  versions.py
jacket/api/jacket_api/: common.py  versions.py
jacket/api/middleware/: auth.py  fault.py  sizelimit.py
jacket/api/openstack/: api_version_request.py  rest_api_version_history.rst  versioned_method.py  wsgi-bak.py  wsgi.py
jacket/api/storage/: __init__.py  common.py  extensions.py  urlmap.py  versions.py  xmlutil.py
jacket/api/v1/: router.py
jacket/cloud/: __init__.py
jacket/cloud_config/: __init__.py  api.py
jacket/cmd/: api.py  compute.py  controller.py  jacket_api.py  manage.py  worker.py
jacket/cmd/compute/: __init__.py  all.py  api.py  api_metadata.py  api_os_compute.py  baseproxy.py  cells.py  cert.py  cloudcompute.py  conductor.py  console.py  consoleauth.py  dhcpbridge.py  idmapshift.py  manage.py  network.py  novncproxy.py  scheduler.py  serialproxy.py  spicehtml5proxy.py  xvpvncproxy.py
jacket/cmd/storage/: all.py  api.py  backup.py  manage.py  rtstool.py  scheduler.py  volume.py  volume_usage_audit.py
jacket/common/: config.py  sqlalchemyutils.py
jacket/common/storage/: config.py  sqlalchemyutils.py
jacket/compute/: availability_zones.py  baserpc.py  block_device.py  cache_utils.py  config.py  context.py  crypto.py  debugger.py  exception.py  filters.py  hooks.py  loadables.py  notifications.py  opts.py  paths.py  policy.py  quota.py  service.py  signature_utils.py  test.py  utils.py  weights.py  wsgi.py
jacket/compute/cells/: manager.py  messaging.py  opts.py  rpc_driver.py  rpcapi.py  scheduler.py  state.py  utils.py
jacket/compute/cert/: manager.py  rpcapi.py
jacket/compute/cloud/: __init__.py  api.py  cells_api.py  claims.py  flavors.py  hv_type.py  manager.py  resource_tracker.py  rpcapi.py  stats.py  utils.py  vm_mode.py
jacket/compute/cloudpipe/: __init__.py  pipelib.py
jacket/compute/compute/: api.py  arch.py  cells_api.py  flavors.py  manager.py  opts.py  resource_tracker.py  rpcapi.py  stats.py  utils.py
jacket/compute/conductor/: __init__.py  api.py  manager.py  rpcapi.py
jacket/compute/conf/: __init__.py  availability_zone.py  cells.py  cert.py  conductor.py  opts.py  pci.py  scheduler.py  serial_console.py  virt.py  vnc.py  wsgi.py
jacket/compute/console/: __init__.py  api.py  manager.py  rpcapi.py  serial.py  websocketproxy.py  xvp.py
jacket/compute/consoleauth/: manager.py  rpcapi.py
jacket/compute/image/: __init__.py  api.py  glance.py  s3.py
jacket/compute/ipv6/: __init__.py  account_identifier.py  api.py  rfc2462.py
jacket/compute/keymgr/: __init__.py  barbican.py  conf_key_mgr.py  mock_key_mgr.py  not_implemented_key_mgr.py  single_key_mgr.py
jacket/compute/network/: __init__.py  api.py  base_api.py  driver.py  floating_ips.py  l3.py  ldapdns.py  linux_net.py  manager.py  minidns.py  model.py  noop_dns_driver.py  opts.py  rpcapi.py
jacket/compute/pci/: devspec.py  manager.py  request.py  stats.py  utils.py  whitelist.py
jacket/compute/scheduler/: __init__.py  caching_scheduler.py  chance.py  driver.py  filter_scheduler.py  host_manager.py  ironic_host_manager.py  manager.py  rpcapi.py  scheduler_options.py  utils.py
jacket/compute/servicegroup/: __init__.py  api.py
jacket/compute/spice/: __init__.py
jacket/compute/virt/: block_device.py  configdrive.py  diagnostics.py  driver.py  event.py  fake.py  firewall.py  hardware.py  imagecache.py  images.py  netutils.py  opts.py  osinfo.py  storage_users.py  volumeutils.py
jacket/compute/vnc/: xvp_proxy.py
jacket/compute/volume/: __init__.py  cinder.py
jacket/conf/: __init__.py  api.py  drivers_conf.py  fs_cinder.py  fs_conf.py  netconf.py  opts.py  quota.py  worker.py
jacket/controller/: api.py  manager.py  rpcapi.py
jacket/db/: __init__.py  api.py  base.py  migration.py
jacket/db/cloud_config/: __init__.py  api.py  migration.py
jacket/db/compute/: __init__.py  api.py  base.py  migration.py
jacket/db/extend/: __init__.py  api.py  migration.py
jacket/db/hybrid_cloud/: __init__.py  api.py  migration.py
jacket/db/jacket/: __init__.py  api.py  base.py  migration.py
jacket/db/sqlalchemy/: api.py  migration.py  models.py
jacket/db/storage/: __init__.py  api.py  base.py  migration.py
jacket/drivers/: retry_test.py
jacket/drivers/fs/: compute_driver.py  driver.py  exception_ex.py  fs_service.py  hyper_agent_api.py  volume_driver.py
jacket/drivers/openstack/: base.py  compute_driver.py  exception_ex.py  hyper_agent_api.py  volume_driver.py
jacket/hacking/: checks.py
jacket/objects/: __init__.py  base.py  fields.py
jacket/objects/cloud_config/: base.py  images_mapper.py
jacket/objects/compute/: __init__.py  agent.py  aggregate.py  bandwidth_usage.py  base.py  block_device.py  build_request.py  cell_mapping.py  ec2.py  (+41 more)
jacket/storage/: context.py  coordination.py  exception.py  flow_utils.py  i18n.py  manager.py  opts.py  policy.py  quota.py  quota_utils.py  rpc.py  service.py  ssh_utils.py  test.py  utils.py  version.py
jacket/worker/: __init__.py  api.py  manager.py  opts.py  rpcapi.py
jacket/wsgi/: base_wsgi.py  common.py  wsgi.py
tools/: centos_jacket.sh  jacket_deploy.sh  tempest.sh  ubuntu_jacket.sh
tools/db/: db_versions_migrate.py
tools/deploy/: jacket_conf.ini  jacket_deploy.sh
tools/docker/: Dockerfile  Dockerfile2  docker_deploy.sh
(+1754 files in other folders)
