[metadata]
name = jacket
summary = Cloud jacket fabric controller
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/jacket/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    jacket

[entry_points]
oslo.config.opts =
    jacket = jacket.opts:list_opts
    jacket.conf = jacket.conf.opts:list_opts
    jacket.worker = jacket.worker.opts:list_opts
    compute = jacket.compute.conf.opts:list_opts
    storage = jacket.storage.opts:list_opts
oslo.config.opts.defaults =
    jacket = jacket.common.config:set_middleware_defaults

console_scripts =
    jacket-api = jacket.cmd.api:main
    jacket-worker = jacket.cmd.worker:main
    jacket-rootwrap = oslo_rootwrap.cmd:main
    jacket-manage = jacket.cmd.manage:main

database.migration =
    compute = jacket.db.compute.migration
    cloud_config = jacket.db.cloud_config.migration
    storage = jacket.db.storage.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[build_apiguide]
all_files = 1
build-dir = api-guide/build
source-dir = api-guide/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = jacket/locale
domain = jacket jacket-log-critical jacket-log-error jacket-log-info jacket-log-warning

[update_catalog]
domain = jacket
output_dir = jacket/locale
input_file = jacket/locale/jacket.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = jacket/locale/jacket.pot

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
